# BamAI

./: .gitignore  chat.org  pyproject.toml
config/: preprocessing_config.yaml  training_config.yaml
data/raw/: families  labels_1.csv  labels_2.csv  labels_3.csv  object_coordinates.json  point_cloud_1.ply  point_cloud_2.ply  point_cloud_3.ply
notebooks/: data_exploration.ipynb
project_files/scripts/: preprocess.py  train.py
puwo/: preprocess.py  train.py
