[tool.poetry]
name = "puwo"
version = "0.1.0"
description = "PoC Detecting elements in a point cloud using AI."
authors = ["Erich Raschle <erichraschle@gmail.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.10"
# fake-bpy-module-4-1 = "^20240604"
numpy = "^2.1.3"
open3d = "^0.18.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.389"
ruff = "^0.7.4"
ruff-lsp = "^0.0.58"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
